@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST findlib-1.3.1.tar.gz 229719 RMD160 c8a609d74df7dd87850ae34c88307af3636b20bc SHA1 996d8ff4372e178a9fb18b690bb9746847763d82 SHA256 9e4b063c3b10f36006521fb4ef457d87c2a0684a55e76c1776fbce707422b978
+DIST findlib-1.3.2.tar.gz 230556 RMD160 74045383f9e1f46c56dd2596199f8f7071705960 SHA1 3850c6732fd3b50b935806859dc7fe481112c810 SHA256 056450c2449aee2a61335cfa1d96f2fb1a14ad50bcd99d7ddf9308307ba90bc3
 EBUILD findlib-1.3.1.ebuild 1840 RMD160 427f21eacb2732864b729cd9e019b6d6931757b2 SHA1 2b2b6679c55ff2f184d34c13d4d26c5bc77d646a SHA256 95ffe7553e8fdf1ae100963ba8167a8c96c772501b7a602e00fed3653e25e7bf
-MISC ChangeLog 9886 RMD160 79e9d9b2e08ee0be42b2069b5a8b976fd411d595 SHA1 2c16b571b0fe4fcef13f8437a38658dc0b348559 SHA256 943544de2e5351f1fb41976545ea3d7e399a49f82cda0c5e8b905654696e0a71
+EBUILD findlib-1.3.2.ebuild 1848 RMD160 f0b6181337d82c5821bb69b3cf90b3823de677bc SHA1 4ce3575cc2e08b3d78c101c1b8bf8d07720fd11b SHA256 0a2e79b0ad23c74bc29c0b7455ab234f20fed4817b8161d5a5c268f81813b08a
+MISC ChangeLog 10007 RMD160 3e9e988e7b5db36346916451ad3a1b2d009da97a SHA1 38c9de7c2a2e9a845ff6b93a4b056ab54a65514d SHA256 e1b8da9d4580160a1159e09e1735fa8f70339e00e842bf8240eae724c4891c9d
 MISC metadata.xml 156 RMD160 b85f5bc80861e3fb890d0c87457a549d5bdaa191 SHA1 3be740773dec616d1c3969afaf1571348e455fef SHA256 40d721e2107cc8aac043b574fdae94c9e31ae133bc8e275fbc0a56329b3f5cee
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/CCVIACgkQX3X2B8XHTonrQACfSvSlNKCT3iO1MzUtGo8PfWG+
-HrQAn1DKrKUBGLLOvbLdaLHjNt6Xlw13
-=p1PX
+iEYEARECAAYFAk/Xn3EACgkQX3X2B8XHTomOGgCaA/N/HNVCudj1NWXod3awKsIt
+umYAoJpgJ7VHJn4JEAvdvVhgkL/oUqeT
+=6WJu
 -----END PGP SIGNATURE-----
